[package]
name = "mpl-core-anchor-wrapper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_core_anchor_wrapper"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["interface-instructions", "init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["metadata"] }
spl-tlv-account-resolution = "0.6.5"
spl-transfer-hook-interface = "0.6.5"
mpl-token-metadata = "5.1.0"
mpl-core = "0.9.1"
proc-macro2 = "1.0.89"
